--- a/Templates/submit.html
+++ b/Templates/submit.html
@@ -14,9 +14,74 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <style>
+        /* Pre-loader CSS */
+        .page-loader {
+            top: 0;
+            width: 100%;
+            height: 100vh;
+            position: absolute;
+            background-color: rgba(39, 39, 39, 0.8);
+            z-index: 1000;
+
+            .txt {
+                color: #888;
+                text-align: center;
+                top: 50%;
+                position: relative;
+                text-transform: uppercase;
+                letter-spacing: 0.3rem;
+                font-weight: bold;
+                line-height: 1.5;
+            }
+        }
+
+        /* Spinner animation */
+        .spinner {
+            position: relative;
+            top: 35%;
+            width: 80px;
+            height: 80px;
+            margin: 0 auto;
+            background-color: #4365D0;
+            border-radius: 100%;
+            -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
+            animation: sk-scaleout 1.0s infinite ease-in-out;
+        }
+
+        @-webkit-keyframes sk-scaleout {
+            0% {
+                -webkit-transform: scale(0)
+            }
+
+            100% {
+                -webkit-transform: scale(1.0);
+                opacity: 0;
+            }
+        }
+
+        @keyframes sk-scaleout {
+            0% {
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            }
+
+            100% {
+                -webkit-transform: scale(1.0);
+                transform: scale(1.0);
+                opacity: 0;
+            }
+        }
+    </style>
+
 </head>
 
-<body>
+<body onload="hideLoader()">
+    <!-- Loader -->
+    <div class="page-loader">
+        <div class="spinner"></div>
+        <div class="txt">Loading...</div>
+    </div>
 
     <div class="wrapper">
         <div style="display: flex; align-items: center; gap: 30px;">
@@ -211,6 +276,18 @@
         </form>
     </div>
     <script>
+
+            function hideLoader() {
+                var loader = document.querySelector('.page-loader');
+                if (loader) {
+                    loader.style.opacity = '0';
+                    loader.style.transition = 'opacity 0.5s';
+                    setTimeout(function() {
+                        loader.style.display = 'none';
+                    }, 500); // Hide the loader after 0.5 seconds (sync with the transition duration)
+                }
+            }
+            
         function goBack() {
             window.history.back();
         }
