--- a/static/Signup.css
+++ b/static/Signup.css
@@ -28,6 +28,16 @@ body {
     perspective: 2700px;
 }
 
+.input-style {
+    width: 70%;
+    padding: 0.5rem;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    transition: border-color 0.3s ease;
+    margin-top: 7px;
+}
+
 .container .cover {
     position: absolute;
     top: 0;
